# burst-frame-deduplicator

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.github/workflows/: binaries.yml  pages.yml
benchmark/: README.md  accuracy_labels.json  fixture_manifest.json  package-lock.json  package.json  run_benchmarks.py  run_frontend_benchmarks.py  wasm_benchmark.mjs
benchmark/results/: frontend-latest.md  latest-linux-arm64.md  latest-linux.md  latest.md  wasm-latest.json  wasm-single-worker.json
crates/burst-core/: Cargo.toml
crates/burst-core/src/: lib.rs
docs/: LINUX_ML_MODELS.md  TECHNICAL.md  USAGE.md
include/: burst_frame_deduplicator.h
locales/: en.json  zh-CN.json
macos/BurstFrameDeduplicatorApp/: Info.plist  Package.swift
macos/BurstFrameDeduplicatorApp/Resources/: AppIcon.icns
macos/BurstFrameDeduplicatorApp/Resources/en.lproj/: InfoPlist.strings
macos/BurstFrameDeduplicatorApp/Resources/zh-Hans.lproj/: InfoPlist.strings
macos/BurstFrameDeduplicatorApp/Sources/BurstFrameAppCore/: ImageViewportGeometry.swift  LocaleCatalog.swift  Models.swift  RustBridge.swift  TutorialProgressStore.swift
macos/BurstFrameDeduplicatorApp/Sources/BurstFrameDeduplicator/: AboutView.swift  AppModel.swift  BurstFrameDeduplicatorApp.swift  CachedImageView.swift  LocalizedFilePanel.swift  NativeImageViewer.swift  PlatformStyles.swift  ReviewView.swift  RootView.swift  RunCacheManager.swift  ScanView.swift  SettingsView.swift  SystemCapability.swift  TriStateCheckbox.swift  TutorialView.swift
macos/BurstFrameDeduplicatorApp/Sources/BurstFrameFFIBenchmark/: main.swift
macos/BurstFrameDeduplicatorApp/Sources/CBurstFrameDeduplicator/: module.modulemap
macos/BurstFrameDeduplicatorApp/Sources/CBurstFrameDeduplicator/include/: burst_frame_deduplicator.h
macos/BurstFrameDeduplicatorApp/Tests/BurstFrameAppCoreTests/: BurstFrameAppCoreTests.swift
packaging/linux/: org.burstframe.Deduplicator.desktop  org.burstframe.Deduplicator.metainfo.xml.in
scripts/: build_linux_app.sh  build_macos_app.sh  build_macos_dmg.sh  install_linux_ml_models.sh  test_linux_gui.sh  test_macos_app.sh
src/: acceleration.rs  app_backend.rs  artifacts.rs  assets.rs  counterpart.rs  cpu_accel.rs  cuda_accel.rs  decode.rs  detector.rs  features.rs  ffi.rs  gui.rs  lib.rs  libraw_preview.rs  locales.rs  main.rs  metadata.rs  metal_accel.rs  ml_detector.rs  operations.rs  pipeline.rs  progress.rs  run_storage.rs  server.rs  types.rs
src/cuda/: focus.cu
src/linux_gui/: config.rs  locale.rs  mod.rs  preview.rs
web/: LICENSE
web/ml-wasm/: Cargo.toml  NOTICE.md  build.rs
web/ml-wasm/assets/: u2netp.bpk
web/ml-wasm/src/: lib.rs  model.rs
web/review/: app.js  index.html  styles.css
web/shared/: tutorial-progress.mjs  tutorial-progress.test.mjs
web/wasm/: Cargo.toml  build.sh
web/wasm/src/: focus.wgsl  lib.rs  webgpu.rs
web/wasm/static/: app.js  coi-serviceworker.js  index.html  styles.css
