[package]
name = "burst-frame-deduplicator"
version = "0.3.1"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[workspace]
members = [".", "crates/burst-core", "web/wasm"]
resolver = "3"

[features]
default = ["macos-native", "linux-native"]
linux-native = ["avx2-accel", "onnx-detector"]
avx2-accel = []
cuda-accel = ["linux-native", "dep:cudarc", "dep:libloading"]
onnx-detector = ["dep:ort"]
macos-native = ["metal-accel", "macos-vision"]
metal-accel = ["dep:metal"]
macos-vision = ["dep:objc"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json"] }
burst-core = { path = "crates/burst-core" }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
csv = "1.4"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "tiff", "webp"] }
jpeg-decoder = { version = "0.3.2", default-features = false }
kamadak-exif = "0.6"
mime_guess = "2.0"
open = "5.3"
parking_lot = "0.12"
rayon = "1.11"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
tempfile = "3.23"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
walkdir = "2.5"
which = "8.0"

[target.'cfg(target_os = "linux")'.dependencies]
cudarc = { version = "0.19.8", default-features = false, features = ["std", "driver", "nvrtc", "dynamic-loading", "cuda-12000"], optional = true }
libloading = { version = "0.9", optional = true }
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "load-dynamic", "api-24", "cuda"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.32", optional = true }
objc = { version = "0.2", optional = true }
