[package]
name = "burst-frame-deduplicator"
version = "0.7.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[workspace]
members = [".", "crates/burst-core", "web/wasm"]
resolver = "3"

[features]
default = ["native"]
native = ["cpu-simd", "onnx-detector", "metal-accel", "macos-vision"]
cpu-simd = []
# Compatibility aliases for build commands published before v0.6.0.
linux-native = ["cpu-simd", "onnx-detector"]
macos-native = ["cpu-simd", "metal-accel", "macos-vision"]
avx2-accel = ["cpu-simd"]
neon-accel = ["cpu-simd"]
cuda-accel = ["dep:cudarc", "dep:libloading"]
onnx-detector = ["dep:ort"]
libraw-preview = ["dep:libloading"]
linux-gui = [
    "cpu-simd",
    "onnx-detector",
    "libraw-preview",
    "dep:adw",
    "dep:gdk-pixbuf",
    "dep:gtk",
]
metal-accel = ["dep:metal"]
macos-vision = ["dep:objc"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json"] }
burst-core = { path = "crates/burst-core" }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
csv = "1.4"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "pnm", "tiff", "webp"] }
jpeg-decoder = { version = "0.3.2", default-features = false }
kamadak-exif = "0.6"
mime_guess = "2.0"
open = "5.3"
parking_lot = "0.12"
rayon = "1.11"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
tempfile = "3.23"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
walkdir = "2.5"
which = "8.0"

[target.'cfg(target_os = "linux")'.dependencies]
adw = { package = "libadwaita", version = "0.9.2", features = ["v1_5"], optional = true }
cudarc = { version = "0.19.8", default-features = false, features = ["std", "driver", "nvrtc", "dynamic-loading", "cuda-12000"], optional = true }
gdk-pixbuf = { version = "0.22.0", optional = true }
gtk = { package = "gtk4", version = "0.11.4", features = ["v4_14"], optional = true }
libloading = { version = "0.9", optional = true }
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "load-dynamic", "api-24", "cuda"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.32", optional = true }
objc = { version = "0.2", optional = true }

[[bin]]
name = "burst-frame-deduplicator-gtk"
path = "src/bin/linux_gui.rs"
required-features = ["linux-gui"]
