[package]
name = "burst-ml-wasm"
version = "0.7.0"
edition = "2024"
description = "Lazy WebGPU U2-Net-P subject detector for Burst Frame Deduplicator"
license-file = "../../LICENSE"
repository = "https://github.com/pan2013e/burst-frame-deduplicator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
burn = { version = "0.21", default-features = false, features = ["std", "webgpu", "store"] }
burn-store = { version = "0.21", default-features = false, features = ["std", "burnpack", "wgpu"] }
burst-core = { path = "../../crates/burst-core" }
console_error_panic_hook = "0.1"
getrandom = { version = "0.4", features = ["wasm_js"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[build-dependencies]
sha2 = "0.10"

[workspace]
