[package]
name = "burst-wasm"
version = "0.7.0"
edition = "2024"
description = "Portable browser scanner for Burst Frame Deduplicator"
license-file = "../../LICENSE"
repository = "https://github.com/pan2013e/burst-frame-deduplicator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
burst-core = { path = "../../crates/burst-core" }
console_error_panic_hook = "0.1"
image = { version = "0.25", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-channel = "0.3"
wasm-bindgen-futures = "0.4"
wgpu = { version = "29.0.1", default-features = false, features = ["std", "webgpu", "wgsl"] }
